fix mobile header spacing between menu and nav

--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -100,7 +100,7 @@
             width: 100%;
             position: absolute;
             left: 0;
-            top: 60px;
+            top: 59px;
             box-shadow: 0 8px 4px -4px rgba(0, 0, 0, 0.2);
             max-height: 0;
             overflow: hidden;
